dev/scss/layout_prefold.scss
// Above the fold layout

body {
  background-color: $c_dark-base;
  background: linear-gradient(180deg, 
    $c_dark-base 0%, 
    $c_grey80 15%,
    $c_grey50 50%,
    $c_grey50 85%, // 85% is just above the post footer on single posts
    $c_grey20 95%);
  color: $c_basetext;
}

// bg texture
.total-wrapper {
  --bgtxfg: rgba(46, 60, 65, 0.25); // foreground - $c_dark-base-rgb
  --bgtxbg: transparent; // background
  --bgtxlines: 54%; // blurriness - 52% original value
  background: 
    radial-gradient(farthest-side at -33.33% 50%,#0000 var(--bgtxlines),var(--bgtxfg) 54% 57%,#0000 59%) 0 144px,
    radial-gradient(farthest-side at 50% 133.33%,#0000 var(--bgtxlines),var(--bgtxfg) 54% 57%,#0000 59%) 144px 0,
    radial-gradient(farthest-side at 133.33% 50%,#0000 var(--bgtxlines),var(--bgtxfg) 54% 57%,#0000 59%),
    radial-gradient(farthest-side at 50% -33.33%,#0000 var(--bgtxlines),var(--bgtxfg) 54% 57%,#0000 59%),
    var(--bgtxbg);
  background-size: 61.71px 288px, 288px 61.71px;
}

// General Definitions
strong,
b {
  font-weight: 600;
}
em {
  font-style: italic;
}
a {
  color: $c_link;
  text-decoration: none;
  &:visited {
    color: $c_visited;
  }
  &:hover {
    color: $c_hover;
  }
  &:focus {
    outline: 1px dotted $c_primary;
  }
  &:active {
    color: $c_active;
    cursor: wait;
  }
  &::after,
  &::before {
    // for links with icons
    font-size: 0.75em;
    margin: 0 0.375em;
  }
}
figure > a {
  display: block;  // force the box model of a tags wrapped around images to behave (not links in captions though)
}
p {
  line-height: 1.5; // Accessibility standards recommend 1.5 - 2.0
  &:not(:last-child) {
    margin-bottom: 0.5em;
  }
}
li {
  line-height: 1.2;
  &:not(:last-child) {
    margin-bottom: 0.5em;
  }
}


// Specific Zones
.header-logo {
  path {
    fill: $c_link;
  }
  a:hover {
    path {
      fill: $c_hover;
    }
  }
}


// Listing Pages
.listing-page {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;

  @media #{$mq_lg} {
    flex-direction: row;
    justify-content: space-evenly;
  }

}


// General Entry Headers
.entry-header {

  @media #{$mq_lg} {

    .inner-wrapper--at-lg {
      padding-left: 0;
      padding-right: 0;
    }

  }

  .stretched-bg {
    background-repeat: no-repeat;
    background-size: 100% auto;  //stretch
    filter: blur(10px) brightness(0.75);
    height: 100%;
    position: absolute;
    width: 100%;
  }

}


// Article Cards
.article-card {
  width: 100%;

  @media #{$mq_lg} {
    margin-bottom: #{($gutter_lg + 2px)/2};
    width: calc( 50vw - #{$gutter_lg + 2px} );  // 2 per row
  }

  @media #{$mq_max} {
    width: #{$bp_max / 2 - $gutter_lg + 2px};  // 2 per row
  }


  // Inner Elements
  .entry-header {
    background: linear-gradient(0deg, rgba($c_grey20,0.625), rgba($c_grey80,0.625));
    max-height: 40vh;
    overflow: hidden;
    position: relative;
  }

  img {
    height: auto;
    margin-left: auto;
    margin-right: auto;
    max-width: $thumbnail_width;
    position: relative;
    //transition: transform 0.2s ease-in-out;
    width: 100%;
  }

  .title-container {
    @include overlay;
  }

  .entry-title {
    font-size: 2.125em;
    font-weight: 400;
    line-height: 1;
    margin: 0 auto;

    @supports (-webkit-line-clamp: 5) {
      -webkit-box-orient: vertical;
      color: $c_link; // for the ellipsis
      display: -webkit-box;
      -webkit-line-clamp: 5;
      overflow: hidden;
      padding-bottom: 0.05em;  // prevent descenders from being cut off
      text-overflow: ellipsis;
    }

  }

  .entry-content,
  .entry-footer {

    .inner-wrapper {

      @media #{$mq_lg} {
        max-width: $thumbnail_width;
      }

    }

  }

  .entry-content {
    padding: 12px 0;

    @media #{$mq_lg} {
      flex-grow: 1;  // make tiles fill height of the row
      width: 100%;  // needed?

      .inner-wrapper {
        height: 100%;  // make inner-wrapper fill the space too
      }

    }

  }

  .excerpt-container {
    padding-bottom: 44px;
    position: relative;
    width: 100%;

    @media #{$mq_md} {
      min-height: 38px; // enough space for CTA
      padding-bottom: 0;  // side-by-side CTA and excerpt
    }

    @media #{$mq_lg} {
      height: 100%;
      padding-bottom: 44px;
    }

    p {
      // Actual excerpt text
      margin: 0;
      max-width: 60ch;
      text-overflow: ellipsis;

      @supports (-webkit-line-clamp: 5) {
        -webkit-box-orient: vertical;
        display: -webkit-box;
        -webkit-line-clamp: 5;
        overflow: hidden;
      }

      @media #{$mq_md} {
        max-width: 52ch;  // Needed?
      }

      @media #{$mq_lg} {
        max-width: 60ch;  // Needed?
      }

    }

    a {
      @include button;
      @include f_medium;
      bottom: 0;
      position: absolute;
      right: 0;
    }

  }

  .entry-footer {
    padding: 8px 0;
    width: 100%;

    .inner-wrapper {
      display: flex;
      flex-direction: column;

      @media #{$mq_md} {
        align-items: center;
        flex-direction: row;
        justify-content: space-between;
      }

      @media #{$mq_lg} {
        flex-wrap: wrap;
      }

    }

    .post-stats,
    .post-categories {

      @media #{$mq_xxl} {
        min-width: 40%;
      }

    }

    .post-stats,
    .post-categories a {
      @include f_small;
    }

    .post-categories {

      @media #{$mq_md} {
        text-align: right;
      }

      a {
        white-space: nowrap;
      }

    }

  }


  // Article Card Hover States
  &:hover {

    // Zoom & Rotate CTAs on hover
    .excerpt-container a,
    &:first-of-type .excerpt-container a {
      font-weight: 700;
      transform: rotate(2.5deg) scale(1.25);
    }

  }

  .entry-header:hover {

    .entry-title {

      &,
      a {
        color: $c_hover; // for the overflow ellipsis
      }

    }

  }

}


// Article and Page Structure
.article-content {

  .entry-header {
    max-height: 60vh;
    overflow: hidden;
    padding-top: $header_height;
    position: relative;

    @media #{$mq_lg} {
      background: linear-gradient(0deg, rgba($c_grey20,0.625), rgba($c_grey80,0.625));
    }

    img {
      // Post Thumbnail
      height: 80vh;
      left: 50%;
      max-height: 80vh;
      max-width: none;
      position: relative;
      transform: translateX(-50%);
      width: auto;
      @media #{$mq_md} {
        height: auto;
        max-width: $thumbnail_width;
      }
      @media #{$mq_lg} {
        max-height: none;
        width: 100%;
      }
    }

  }

  .title-container {
    @include overlay;
    max-width: 100%;
    padding-bottom: 16px;
  }

  .entry-title,
  .post-meta {
    margin-left: auto;
    margin-right: auto;
    max-width: 1024px;
  }

  .entry-content {
    overflow-x: hidden; // preventing horizontal scrolling for edge cases
    padding: 24px 0 72px;
  }

}

